--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/graphql": "^10.2.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^6.2.1",
+    "@nestjs/terminus": "^9.2.1",
     "@prisma/client": "^4.10.1",
     "apollo-server-express": "^3.11.1",
     "class-transformer": "^0.5.1",
