--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
+    "test:staged": "npm t -- --findRelatedTests",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
@@ -52,6 +53,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "29.3.1",
     "jest-mock-extended": "^3.0.2",
+    "lint-staged": "^13.1.2",
     "prettier": "^2.3.2",
     "prisma": "^4.10.1",
     "source-map-support": "^0.5.20",
