--- a/package.json
+++ b/package.json
@@ -90,5 +90,8 @@
     "moduleNameMapper": {
       "^@/(.*)$": "<rootDir>/../src/$1"
     }
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seeds"
   }
 }
