feat: add create report service

--- a/package.json
+++ b/package.json
@@ -89,7 +89,8 @@
     "testEnvironment": "node",
     "moduleNameMapper": {
       "^@/(.*)$": "<rootDir>/../src/$1"
-    }
+    },
+    "clearMocks": true
   },
   "prisma": {
     "seed": "ts-node prisma/seeds"
