--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "graphql": "^16.6.0",
     "helmet": "^6.0.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "ts-node": "^10.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.4",
@@ -68,7 +69,6 @@
     "supertest": "^6.1.3",
     "ts-jest": "29.0.3",
     "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
     "tsconfig-paths": "4.1.1",
     "typescript": "^4.7.4"
   },
